# Mirage

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: HookEngine.cpp  HookEngine.hpp  common.h  detours.cpp  dllmain.cpp  hooks.h  nt_defs.h
src/loader/: main.cpp
test/: CMakeLists.txt  app.cpp
